--- a/configs/bpe_5000.yaml
+++ b/configs/bpe_5000.yaml
@@ -3,9 +3,12 @@ joeynmt_version: "2.0.0"
 
 
 data:
-  train: "data_bpe_5000/train.en-de"
-  dev: "data_bpe_5000/dev.en-de"
-  test: "data_bpe_5000/test.en-de"
+  # take the sampled training data
+  train: "data_sampled/sampled_train.en-de"
+  # take the original dev data
+  dev: "data/dev.en-de"
+  # take the original test data
+  test: "data/test.en-de"
   dataset_type: "plain"
   src:
     lang: "en"
